src/chap5/y.output
Grammatik

    0 $accept: program $end

    1 program: expression

    2 expression: INT
    3           | STRING
    4           | BREAK
    5           | NIL
    6           | lvalue
    7           | assignment
    8           | selection
    9           | iteration
   10           | function_call
   11           | arithmetic_expression
   12           | comparison
   13           | boolean_expression
   14           | MINUS expression
   15           | ID LBRACE field_assignments RBRACE
   16           | ID LBRACK expression RBRACK OF expression
   17           | LPAREN RPAREN
   18           | LPAREN expression_sequence RPAREN
   19           | LET declaration_sequence IN END
   20           | LET declaration_sequence IN expression_sequence END

   21 lvalue: ID lvalue_extension

   22 lvalue_extension: /* leer */
   23                 | DOT ID lvalue_extension
   24                 | LBRACK expression RBRACK lvalue_extension

   25 assignment: lvalue ASSIGN expression

   26 function_call: ID LPAREN RPAREN
   27              | ID LPAREN expression_list RPAREN

   28 arithmetic_expression: expression PLUS expression
   29                      | expression MINUS expression
   30                      | expression TIMES expression
   31                      | expression DIVIDE expression

   32 comparison: expression EQ expression
   33           | expression NEQ expression
   34           | expression GT expression
   35           | expression LT expression
   36           | expression GE expression
   37           | expression LE expression

   38 boolean_expression: expression AND expression
   39                   | expression OR expression

   40 field_assignments: /* leer */
   41                  | field_assignment_list

   42 field_assignment_list: field_assignment
   43                      | field_assignment COMMA field_assignment_list

   44 field_assignment: ID EQ type

   45 declaration_sequence: /* leer */
   46                     | declaration declaration_sequence

   47 declaration: type_declaration
   48            | variable_declaration
   49            | function_declaration

   50 type_declaration: TYPE ID EQ type

   51 type: ID
   52     | LBRACE type_fields RBRACE
   53     | ARRAY OF ID

   54 type_fields: /* leer */
   55            | type_field_list

   56 type_field_list: ID COLON ID
   57                | ID EQ ID
   58                | type_field_list COMMA ID COLON ID

   59 variable_declaration: VAR ID ASSIGN expression
   60                     | VAR ID COLON ID ASSIGN expression

   61 function_declaration: FUNCTION ID LPAREN type_fields RPAREN EQ expression
   62                     | FUNCTION ID LPAREN type_fields RPAREN COLON ID EQ expression

   63 selection: IF expression THEN expression ELSE expression
   64          | IF expression THEN expression

   65 iteration: WHILE expression DO expression
   66          | FOR ID ASSIGN expression TO expression DO expression

   67 expression_sequence: expression
   68                    | expression_sequence SEMICOLON expression

   69 expression_list: expression
   70                | expression_list COMMA expression


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256)
ID (258) 15 16 21 23 26 27 44 50 51 53 56 57 58 59 60 61 62 66
STRING (259) 3
INT (260) 2
COMMA (261) 43 58 70
COLON (262) 56 58 60 62
SEMICOLON (263) 68
LPAREN (264) 17 18 26 27 61 62
RPAREN (265) 17 18 26 27 61 62
LBRACK (266) 16 24
RBRACK (267) 16 24
LBRACE (268) 15 52
RBRACE (269) 15 52
DOT (270) 23
PLUS (271) 28
MINUS (272) 14 29
TIMES (273) 30
DIVIDE (274) 31
EQ (275) 32 44 50 57 61 62
NEQ (276) 33
LT (277) 35
LE (278) 37
GT (279) 34
GE (280) 36
AND (281) 38
OR (282) 39
ASSIGN (283) 25 59 60 66
ARRAY (284) 53
IF (285) 63 64
THEN (286) 63 64
ELSE (287) 63
WHILE (288) 65
FOR (289) 66
TO (290) 66
DO (291) 65 66
LET (292) 19 20
IN (293) 19 20
END (294) 19 20
OF (295) 16 53
BREAK (296) 4
NIL (297) 5
FUNCTION (298) 61 62
VAR (299) 59 60
TYPE (300) 50
UMINUS (301)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (47)
    auf der linken Seite: 0
program (48)
    auf der linken Seite: 1, auf der rechten Seite: 0
expression (49)
    auf der linken Seite: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18
    19 20, auf der rechten Seite: 1 14 16 24 25 28 29 30 31 32 33 34
    35 36 37 38 39 59 60 61 62 63 64 65 66 67 68 69 70
lvalue (50)
    auf der linken Seite: 21, auf der rechten Seite: 6 25
lvalue_extension (51)
    auf der linken Seite: 22 23 24, auf der rechten Seite: 21 23 24
assignment (52)
    auf der linken Seite: 25, auf der rechten Seite: 7
function_call (53)
    auf der linken Seite: 26 27, auf der rechten Seite: 10
arithmetic_expression (54)
    auf der linken Seite: 28 29 30 31, auf der rechten Seite: 11
comparison (55)
    auf der linken Seite: 32 33 34 35 36 37, auf der rechten Seite:
    12
boolean_expression (56)
    auf der linken Seite: 38 39, auf der rechten Seite: 13
field_assignments (57)
    auf der linken Seite: 40 41, auf der rechten Seite: 15
field_assignment_list (58)
    auf der linken Seite: 42 43, auf der rechten Seite: 41 43
field_assignment (59)
    auf der linken Seite: 44, auf der rechten Seite: 42 43
declaration_sequence (60)
    auf der linken Seite: 45 46, auf der rechten Seite: 19 20 46
declaration (61)
    auf der linken Seite: 47 48 49, auf der rechten Seite: 46
type_declaration (62)
    auf der linken Seite: 50, auf der rechten Seite: 47
type (63)
    auf der linken Seite: 51 52 53, auf der rechten Seite: 44 50
type_fields (64)
    auf der linken Seite: 54 55, auf der rechten Seite: 52 61 62
type_field_list (65)
    auf der linken Seite: 56 57 58, auf der rechten Seite: 55 58
variable_declaration (66)
    auf der linken Seite: 59 60, auf der rechten Seite: 48
function_declaration (67)
    auf der linken Seite: 61 62, auf der rechten Seite: 49
selection (68)
    auf der linken Seite: 63 64, auf der rechten Seite: 8
iteration (69)
    auf der linken Seite: 65 66, auf der rechten Seite: 9
expression_sequence (70)
    auf der linken Seite: 67 68, auf der rechten Seite: 18 20 68
expression_list (71)
    auf der linken Seite: 69 70, auf der rechten Seite: 27 70


Zustand 0

    0 $accept: . program $end
    1 program: . expression
    2 expression: . INT
    3           | . STRING
    4           | . BREAK
    5           | . NIL
    6           | . lvalue
    7           | . assignment
    8           | . selection
    9           | . iteration
   10           | . function_call
   11           | . arithmetic_expression
   12           | . comparison
   13           | . boolean_expression
   14           | . MINUS expression
   15           | . ID LBRACE field_assignments RBRACE
   16           | . ID LBRACK expression RBRACK OF expression
   17           | . LPAREN RPAREN
   18           | . LPAREN expression_sequence RPAREN
   19           | . LET declaration_sequence IN END
   20           | . LET declaration_sequence IN expression_sequence END
   21 lvalue: . ID lvalue_extension
   25 assignment: . lvalue ASSIGN expression
   26 function_call: . ID LPAREN RPAREN
   27              | . ID LPAREN expression_list RPAREN
   28 arithmetic_expression: . expression PLUS expression
   29                      | . expression MINUS expression
   30                      | . expression TIMES expression
   31                      | . expression DIVIDE expression
   32 comparison: . expression EQ expression
   33           | . expression NEQ expression
   34           | . expression GT expression
   35           | . expression LT expression
   36           | . expression GE expression
   37           | . expression LE expression
   38 boolean_expression: . expression AND expression
   39                   | . expression OR expression
   63 selection: . IF expression THEN expression ELSE expression
   64          | . IF expression THEN expression
   65 iteration: . WHILE expression DO expression
   66          | . FOR ID ASSIGN expression TO expression DO expression

    ID      schiebe und gehe zu Zustand 1 über
    STRING  schiebe und gehe zu Zustand 2 über
    INT     schiebe und gehe zu Zustand 3 über
    LPAREN  schiebe und gehe zu Zustand 4 über
    MINUS   schiebe und gehe zu Zustand 5 über
    IF      schiebe und gehe zu Zustand 6 über
    WHILE   schiebe und gehe zu Zustand 7 über
    FOR     schiebe und gehe zu Zustand 8 über
    LET     schiebe und gehe zu Zustand 9 über
    BREAK   schiebe und gehe zu Zustand 10 über
    NIL     schiebe und gehe zu Zustand 11 über

    program                gehe zu Zustand 12 über
    expression             gehe zu Zustand 13 über
    lvalue                 gehe zu Zustand 14 über
    assignment             gehe zu Zustand 15 über
    function_call          gehe zu Zustand 16 über
    arithmetic_expression  gehe zu Zustand 17 über
    comparison             gehe zu Zustand 18 über
    boolean_expression     gehe zu Zustand 19 über
    selection              gehe zu Zustand 20 über
    iteration              gehe zu Zustand 21 über


Zustand 1

   15 expression: ID . LBRACE field_assignments RBRACE
   16           | ID . LBRACK expression RBRACK OF expression
   21 lvalue: ID . lvalue_extension
   22 lvalue_extension: .
   23                 | . DOT ID lvalue_extension
   24                 | . LBRACK expression RBRACK lvalue_extension
   26 function_call: ID . LPAREN RPAREN
   27              | ID . LPAREN expression_list RPAREN

    LPAREN  schiebe und gehe zu Zustand 22 über
    LBRACK  schiebe und gehe zu Zustand 23 über
    LBRACE  schiebe und gehe zu Zustand 24 über
    DOT     schiebe und gehe zu Zustand 25 über

    $default  reduziere mit Regel 22 (lvalue_extension)

    lvalue_extension  gehe zu Zustand 26 über


Zustand 2

    3 expression: STRING .

    $default  reduziere mit Regel 3 (expression)


Zustand 3

    2 expression: INT .

    $default  reduziere mit Regel 2 (expression)


Zustand 4

    2 expression: . INT
    3           | . STRING
    4           | . BREAK
    5           | . NIL
    6           | . lvalue
    7           | . assignment
    8           | . selection
    9           | . iteration
   10           | . function_call
   11           | . arithmetic_expression
   12           | . comparison
   13           | . boolean_expression
   14           | . MINUS expression
   15           | . ID LBRACE field_assignments RBRACE
   16           | . ID LBRACK expression RBRACK OF expression
   17           | . LPAREN RPAREN
   17           | LPAREN . RPAREN
   18           | . LPAREN expression_sequence RPAREN
   18           | LPAREN . expression_sequence RPAREN
   19           | . LET declaration_sequence IN END
   20           | . LET declaration_sequence IN expression_sequence END
   21 lvalue: . ID lvalue_extension
   25 assignment: . lvalue ASSIGN expression
   26 function_call: . ID LPAREN RPAREN
   27              | . ID LPAREN expression_list RPAREN
   28 arithmetic_expression: . expression PLUS expression
   29                      | . expression MINUS expression
   30                      | . expression TIMES expression
   31                      | . expression DIVIDE expression
   32 comparison: . expression EQ expression
   33           | . expression NEQ expression
   34           | . expression GT expression
   35           | . expression LT expression
   36           | . expression GE expression
   37           | . expression LE expression
   38 boolean_expression: . expression AND expression
   39                   | . expression OR expression
   63 selection: . IF expression THEN expression ELSE expression
   64          | . IF expression THEN expression
   65 iteration: . WHILE expression DO expression
   66          | . FOR ID ASSIGN expression TO expression DO expression
   67 expression_sequence: . expression
   68                    | . expression_sequence SEMICOLON expression

    ID      schiebe und gehe zu Zustand 1 über
    STRING  schiebe und gehe zu Zustand 2 über
    INT     schiebe und gehe zu Zustand 3 über
    LPAREN  schiebe und gehe zu Zustand 4 über
    RPAREN  schiebe und gehe zu Zustand 27 über
    MINUS   schiebe und gehe zu Zustand 5 über
    IF      schiebe und gehe zu Zustand 6 über
    WHILE   schiebe und gehe zu Zustand 7 über
    FOR     schiebe und gehe zu Zustand 8 über
    LET     schiebe und gehe zu Zustand 9 über
    BREAK   schiebe und gehe zu Zustand 10 über
    NIL     schiebe und gehe zu Zustand 11 über

    expression             gehe zu Zustand 28 über
    lvalue                 gehe zu Zustand 14 über
    assignment             gehe zu Zustand 15 über
    function_call          gehe zu Zustand 16 über
    arithmetic_expression  gehe zu Zustand 17 über
    comparison             gehe zu Zustand 18 über
    boolean_expression     gehe zu Zustand 19 über
    selection              gehe zu Zustand 20 über
    iteration              gehe zu Zustand 21 über
    expression_sequence    gehe zu Zustand 29 über


Zustand 5

    2 expression: . INT
    3           | . STRING
    4           | . BREAK
    5           | . NIL
    6           | . lvalue
    7           | . assignment
    8           | . selection
    9           | . iteration
   10           | . function_call
   11           | . arithmetic_expression
   12           | . comparison
   13           | . boolean_expression
   14           | . MINUS expression
   14           | MINUS . expression
   15           | . ID LBRACE field_assignments RBRACE
   16           | . ID LBRACK expression RBRACK OF expression
   17           | . LPAREN RPAREN
   18           | . LPAREN expression_sequence RPAREN
   19           | . LET declaration_sequence IN END
   20           | . LET declaration_sequence IN expression_sequence END
   21 lvalue: . ID lvalue_extension
   25 assignment: . lvalue ASSIGN expression
   26 function_call: . ID LPAREN RPAREN
   27              | . ID LPAREN expression_list RPAREN
   28 arithmetic_expression: . expression PLUS expression
   29                      | . expression MINUS expression
   30                      | . expression TIMES expression
   31                      | . expression DIVIDE expression
   32 comparison: . expression EQ expression
   33           | . expression NEQ expression
   34           | . expression GT expression
   35           | . expression LT expression
   36           | . expression GE expression
   37           | . expression LE expression
   38 boolean_expression: . expression AND expression
   39                   | . expression OR expression
   63 selection: . IF expression THEN expression ELSE expression
   64          | . IF expression THEN expression
   65 iteration: . WHILE expression DO expression
   66          | . FOR ID ASSIGN expression TO expression DO expression

    ID      schiebe und gehe zu Zustand 1 über
    STRING  schiebe und gehe zu Zustand 2 über
    INT     schiebe und gehe zu Zustand 3 über
    LPAREN  schiebe und gehe zu Zustand 4 über
    MINUS   schiebe und gehe zu Zustand 5 über
    IF      schiebe und gehe zu Zustand 6 über
    WHILE   schiebe und gehe zu Zustand 7 über
    FOR     schiebe und gehe zu Zustand 8 über
    LET     schiebe und gehe zu Zustand 9 über
    BREAK   schiebe und gehe zu Zustand 10 über
    NIL     schiebe und gehe zu Zustand 11 über

    expression             gehe zu Zustand 30 über
    lvalue                 gehe zu Zustand 14 über
    assignment             gehe zu Zustand 15 über
    function_call          gehe zu Zustand 16 über
    arithmetic_expression  gehe zu Zustand 17 über
    comparison             gehe zu Zustand 18 über
    boolean_expression     gehe zu Zustand 19 über
    selection              gehe zu Zustand 20 über
    iteration              gehe zu Zustand 21 über


Zustand 6

    2 expression: . INT
    3           | . STRING
    4           | . BREAK
    5           | . NIL
    6           | . lvalue
    7           | . assignment
    8           | . selection
    9           | . iteration
   10           | . function_call
   11           | . arithmetic_expression
   12           | . comparison
   13           | . boolean_expression
   14           | . MINUS expression
   15           | . ID LBRACE field_assignments RBRACE
   16           | . ID LBRACK expression RBRACK OF expression
   17           | . LPAREN RPAREN
   18           | . LPAREN expression_sequence RPAREN
   19           | . LET declaration_sequence IN END
   20           | . LET declaration_sequence IN expression_sequence END
   21 lvalue: . ID lvalue_extension
   25 assignment: . lvalue ASSIGN expression
   26 function_call: . ID LPAREN RPAREN
   27              | . ID LPAREN expression_list RPAREN
   28 arithmetic_expression: . expression PLUS expression
   29                      | . expression MINUS expression
   30                      | . expression TIMES expression
   31                      | . expression DIVIDE expression
   32 comparison: . expression EQ expression
   33           | . expression NEQ expression
   34           | . expression GT expression
   35           | . expression LT expression
   36           | . expression GE expression
   37           | . expression LE expression
   38 boolean_expression: . expression AND expression
   39                   | . expression OR expression
   63 selection: . IF expression THEN expression ELSE expression
   63          | IF . expression THEN expression ELSE expression
   64          | . IF expression THEN expression
   64          | IF . expression THEN expression
   65 iteration: . WHILE expression DO expression
   66          | . FOR ID ASSIGN expression TO expression DO expression

    ID      schiebe und gehe zu Zustand 1 über
    STRING  schiebe und gehe zu Zustand 2 über
    INT     schiebe und gehe zu Zustand 3 über
    LPAREN  schiebe und gehe zu Zustand 4 über
    MINUS   schiebe und gehe zu Zustand 5 über
    IF      schiebe und gehe zu Zustand 6 über
    WHILE   schiebe und gehe zu Zustand 7 über
    FOR     schiebe und gehe zu Zustand 8 über
    LET     schiebe und gehe zu Zustand 9 über
    BREAK   schiebe und gehe zu Zustand 10 über
    NIL     schiebe und gehe zu Zustand 11 über

    expression             gehe zu Zustand 31 über
    lvalue                 gehe zu Zustand 14 über
    assignment             gehe zu Zustand 15 über
    function_call          gehe zu Zustand 16 über
    arithmetic_expression  gehe zu Zustand 17 über
    comparison             gehe zu Zustand 18 über
    boolean_expression     gehe zu Zustand 19 über
    selection              gehe zu Zustand 20 über
    iteration              gehe zu Zustand 21 über


Zustand 7

    2 expression: . INT
    3           | . STRING
    4           | . BREAK
    5           | . NIL
    6           | . lvalue
    7           | . assignment
    8           | . selection
    9           | . iteration
   10           | . function_call
   11           | . arithmetic_expression
   12           | . comparison
   13           | . boolean_expression
   14           | . MINUS expression
   15           | . ID LBRACE field_assignments RBRACE
   16           | . ID LBRACK expression RBRACK OF expression
   17           | . LPAREN RPAREN
   18           | . LPAREN expression_sequence RPAREN
   19           | . LET declaration_sequence IN END
   20           | . LET declaration_sequence IN expression_sequence END
   21 lvalue: . ID lvalue_extension
   25 assignment: . lvalue ASSIGN expression
   26 function_call: . ID LPAREN RPAREN
   27              | . ID LPAREN expression_list RPAREN
   28 arithmetic_expression: . expression PLUS expression
   29                      | . expression MINUS expression
   30                      | . expression TIMES expression
   31                      | . expression DIVIDE expression
   32 comparison: . expression EQ expression
   33           | . expression NEQ expression
   34           | . expression GT expression
   35           | . expression LT expression
   36           | . expression GE expression
   37           | . expression LE expression
   38 boolean_expression: . expression AND expression
   39                   | . expression OR expression
   63 selection: . IF expression THEN expression ELSE expression
   64          | . IF expression THEN expression
   65 iteration: . WHILE expression DO expression
   65          | WHILE . expression DO expression
   66          | . FOR ID ASSIGN expression TO expression DO expression

    ID      schiebe und gehe zu Zustand 1 über
    STRING  schiebe und gehe zu Zustand 2 über
    INT     schiebe und gehe zu Zustand 3 über
    LPAREN  schiebe und gehe zu Zustand 4 über
    MINUS   schiebe und gehe zu Zustand 5 über
    IF      schiebe und gehe zu Zustand 6 über
    WHILE   schiebe und gehe zu Zustand 7 über
    FOR     schiebe und gehe zu Zustand 8 über
    LET     schiebe und gehe zu Zustand 9 über
    BREAK   schiebe und gehe zu Zustand 10 über
    NIL     schiebe und gehe zu Zustand 11 über

    expression             gehe zu Zustand 32 über
    lvalue                 gehe zu Zustand 14 über
    assignment             gehe zu Zustand 15 über
    function_call          gehe zu Zustand 16 über
    arithmetic_expression  gehe zu Zustand 17 über
    comparison             gehe zu Zustand 18 über
    boolean_expression     gehe zu Zustand 19 über
    selection              gehe zu Zustand 20 über
    iteration              gehe zu Zustand 21 über


Zustand 8

   66 iteration: FOR . ID ASSIGN expression TO expression DO expression

    ID  schiebe und gehe zu Zustand 33 über


Zustand 9

   19 expression: LET . declaration_sequence IN END
   20           | LET . declaration_sequence IN expression_sequence END
   45 declaration_sequence: .
   46                     | . declaration declaration_sequence
   47 declaration: . type_declaration
   48            | . variable_declaration
   49            | . function_declaration
   50 type_declaration: . TYPE ID EQ type
   59 variable_declaration: . VAR ID ASSIGN expression
   60                     | . VAR ID COLON ID ASSIGN expression
   61 function_declaration: . FUNCTION ID LPAREN type_fields RPAREN EQ expression
   62                     | . FUNCTION ID LPAREN type_fields RPAREN COLON ID EQ expression

    FUNCTION  schiebe und gehe zu Zustand 34 über
    VAR       schiebe und gehe zu Zustand 35 über
    TYPE      schiebe und gehe zu Zustand 36 über

    $default  reduziere mit Regel 45 (declaration_sequence)

    declaration_sequence  gehe zu Zustand 37 über
    declaration           gehe zu Zustand 38 über
    type_declaration      gehe zu Zustand 39 über
    variable_declaration  gehe zu Zustand 40 über
    function_declaration  gehe zu Zustand 41 über


Zustand 10

    4 expression: BREAK .

    $default  reduziere mit Regel 4 (expression)


Zustand 11

    5 expression: NIL .

    $default  reduziere mit Regel 5 (expression)


Zustand 12

    0 $accept: program . $end

    $end  schiebe und gehe zu Zustand 42 über


Zustand 13

    1 program: expression .
   28 arithmetic_expression: expression . PLUS expression
   29                      | expression . MINUS expression
   30                      | expression . TIMES expression
   31                      | expression . DIVIDE expression
   32 comparison: expression . EQ expression
   33           | expression . NEQ expression
   34           | expression . GT expression
   35           | expression . LT expression
   36           | expression . GE expression
   37           | expression . LE expression
   38 boolean_expression: expression . AND expression
   39                   | expression . OR expression

    PLUS    schiebe und gehe zu Zustand 43 über
    MINUS   schiebe und gehe zu Zustand 44 über
    TIMES   schiebe und gehe zu Zustand 45 über
    DIVIDE  schiebe und gehe zu Zustand 46 über
    EQ      schiebe und gehe zu Zustand 47 über
    NEQ     schiebe und gehe zu Zustand 48 über
    LT      schiebe und gehe zu Zustand 49 über
    LE      schiebe und gehe zu Zustand 50 über
    GT      schiebe und gehe zu Zustand 51 über
    GE      schiebe und gehe zu Zustand 52 über
    AND     schiebe und gehe zu Zustand 53 über
    OR      schiebe und gehe zu Zustand 54 über

    $default  reduziere mit Regel 1 (program)


Zustand 14

    6 expression: lvalue .
   25 assignment: lvalue . ASSIGN expression

    ASSIGN  schiebe und gehe zu Zustand 55 über

    $default  reduziere mit Regel 6 (expression)


Zustand 15

    7 expression: assignment .

    $default  reduziere mit Regel 7 (expression)


Zustand 16

   10 expression: function_call .

    $default  reduziere mit Regel 10 (expression)


Zustand 17

   11 expression: arithmetic_expression .

    $default  reduziere mit Regel 11 (expression)


Zustand 18

   12 expression: comparison .

    $default  reduziere mit Regel 12 (expression)


Zustand 19

   13 expression: boolean_expression .

    $default  reduziere mit Regel 13 (expression)


Zustand 20

    8 expression: selection .

    $default  reduziere mit Regel 8 (expression)


Zustand 21

    9 expression: iteration .

    $default  reduziere mit Regel 9 (expression)


Zustand 22

    2 expression: . INT
    3           | . STRING
    4           | . BREAK
    5           | . NIL
    6           | . lvalue
    7           | . assignment
    8           | . selection
    9           | . iteration
   10           | . function_call
   11           | . arithmetic_expression
   12           | . comparison
   13           | . boolean_expression
   14           | . MINUS expression
   15           | . ID LBRACE field_assignments RBRACE
   16           | . ID LBRACK expression RBRACK OF expression
   17           | . LPAREN RPAREN
   18           | . LPAREN expression_sequence RPAREN
   19           | . LET declaration_sequence IN END
   20           | . LET declaration_sequence IN expression_sequence END
   21 lvalue: . ID lvalue_extension
   25 assignment: . lvalue ASSIGN expression
   26 function_call: . ID LPAREN RPAREN
   26              | ID LPAREN . RPAREN
   27              | . ID LPAREN expression_list RPAREN
   27              | ID LPAREN . expression_list RPAREN
   28 arithmetic_expression: . expression PLUS expression
   29                      | . expression MINUS expression
   30                      | . expression TIMES expression
   31                      | . expression DIVIDE expression
   32 comparison: . expression EQ expression
   33           | . expression NEQ expression
   34           | . expression GT expression
   35           | . expression LT expression
   36           | . expression GE expression
   37           | . expression LE expression
   38 boolean_expression: . expression AND expression
   39                   | . expression OR expression
   63 selection: . IF expression THEN expression ELSE expression
   64          | . IF expression THEN expression
   65 iteration: . WHILE expression DO expression
   66          | . FOR ID ASSIGN expression TO expression DO expression
   69 expression_list: . expression
   70                | . expression_list COMMA expression

    ID      schiebe und gehe zu Zustand 1 über
    STRING  schiebe und gehe zu Zustand 2 über
    INT     schiebe und gehe zu Zustand 3 über
    LPAREN  schiebe und gehe zu Zustand 4 über
    RPAREN  schiebe und gehe zu Zustand 56 über
    MINUS   schiebe und gehe zu Zustand 5 über
    IF      schiebe und gehe zu Zustand 6 über
    WHILE   schiebe und gehe zu Zustand 7 über
    FOR     schiebe und gehe zu Zustand 8 über
    LET     schiebe und gehe zu Zustand 9 über
    BREAK   schiebe und gehe zu Zustand 10 über
    NIL     schiebe und gehe zu Zustand 11 über

    expression             gehe zu Zustand 57 über
    lvalue                 gehe zu Zustand 14 über
    assignment             gehe zu Zustand 15 über
    function_call          gehe zu Zustand 16 über
    arithmetic_expression  gehe zu Zustand 17 über
    comparison             gehe zu Zustand 18 über
    boolean_expression     gehe zu Zustand 19 über
    selection              gehe zu Zustand 20 über
    iteration              gehe zu Zustand 21 über
    expression_list        gehe zu Zustand 58 über


Zustand 23

    2 expression: . INT
    3           | . STRING
    4           | . BREAK
    5           | . NIL
    6           | . lvalue
    7           | . assignment
    8           | . selection
    9           | . iteration
   10           | . function_call
   11           | . arithmetic_expression
   12           | . comparison
   13           | . boolean_expression
   14           | . MINUS expression
   15           | . ID LBRACE field_assignments RBRACE
   16           | . ID LBRACK expression RBRACK OF expression
   16           | ID LBRACK . expression RBRACK OF expression
   17           | . LPAREN RPAREN
   18           | . LPAREN expression_sequence RPAREN
   19           | . LET declaration_sequence IN END
   20           | . LET declaration_sequence IN expression_sequence END
   21 lvalue: . ID lvalue_extension
   24 lvalue_extension: LBRACK . expression RBRACK lvalue_extension
   25 assignment: . lvalue ASSIGN expression
   26 function_call: . ID LPAREN RPAREN
   27              | . ID LPAREN expression_list RPAREN
   28 arithmetic_expression: . expression PLUS expression
   29                      | . expression MINUS expression
   30                      | . expression TIMES expression
   31                      | . expression DIVIDE expression
   32 comparison: . expression EQ expression
   33           | . expression NEQ expression
   34           | . expression GT expression
   35           | . expression LT expression
   36           | . expression GE expression
   37           | . expression LE expression
   38 boolean_expression: . expression AND expression
   39                   | . expression OR expression
   63 selection: . IF expression THEN expression ELSE expression
   64          | . IF expression THEN expression
   65 iteration: . WHILE expression DO expression
   66          | . FOR ID ASSIGN expression TO expression DO expression

    ID      schiebe und gehe zu Zustand 1 über
    STRING  schiebe und gehe zu Zustand 2 über
    INT     schiebe und gehe zu Zustand 3 über
    LPAREN  schiebe und gehe zu Zustand 4 über
    MINUS   schiebe und gehe zu Zustand 5 über
    IF      schiebe und gehe zu Zustand 6 über
    WHILE   schiebe und gehe zu Zustand 7 über
    FOR     schiebe und gehe zu Zustand 8 über
    LET     schiebe und gehe zu Zustand 9 über
    BREAK   schiebe und gehe zu Zustand 10 über
    NIL     schiebe und gehe zu Zustand 11 über

    expression             gehe zu Zustand 59 über
    lvalue                 gehe zu Zustand 14 über
    assignment             gehe zu Zustand 15 über
    function_call          gehe zu Zustand 16 über
    arithmetic_expression  gehe zu Zustand 17 über
    comparison             gehe zu Zustand 18 über
    boolean_expression     gehe zu Zustand 19 über
    selection              gehe zu Zustand 20 über
    iteration              gehe zu Zustand 21 über


Zustand 24

   15 expression: ID LBRACE . field_assignments RBRACE
   40 field_assignments: .
   41                  | . field_assignment_list
   42 field_assignment_list: . field_assignment
   43                      | . field_assignment COMMA field_assignment_list
   44 field_assignment: . ID EQ type

    ID  schiebe und gehe zu Zustand 60 über

    $default  reduziere mit Regel 40 (field_assignments)

    field_assignments      gehe zu Zustand 61 über
    field_assignment_list  gehe zu Zustand 62 über
    field_assignment       gehe zu Zustand 63 über


Zustand 25

   23 lvalue_extension: DOT . ID lvalue_extension

    ID  schiebe und gehe zu Zustand 64 über


Zustand 26

   21 lvalue: ID lvalue_extension .

    $default  reduziere mit Regel 21 (lvalue)


Zustand 27

   17 expression: LPAREN RPAREN .

    $default  reduziere mit Regel 17 (expression)


Zustand 28

   28 arithmetic_expression: expression . PLUS expression
   29                      | expression . MINUS expression
   30                      | expression . TIMES expression
   31                      | expression . DIVIDE expression
   32 comparison: expression . EQ expression
   33           | expression . NEQ expression
   34           | expression . GT expression
   35           | expression . LT expression
   36           | expression . GE expression
   37           | expression . LE expression
   38 boolean_expression: expression . AND expression
   39                   | expression . OR expression
   67 expression_sequence: expression .

    PLUS    schiebe und gehe zu Zustand 43 über
    MINUS   schiebe und gehe zu Zustand 44 über
    TIMES   schiebe und gehe zu Zustand 45 über
    DIVIDE  schiebe und gehe zu Zustand 46 über
    EQ      schiebe und gehe zu Zustand 47 über
    NEQ     schiebe und gehe zu Zustand 48 über
    LT      schiebe und gehe zu Zustand 49 über
    LE      schiebe und gehe zu Zustand 50 über
    GT      schiebe und gehe zu Zustand 51 über
    GE      schiebe und gehe zu Zustand 52 über
    AND     schiebe und gehe zu Zustand 53 über
    OR      schiebe und gehe zu Zustand 54 über

    $default  reduziere mit Regel 67 (expression_sequence)


Zustand 29

   18 expression: LPAREN expression_sequence . RPAREN
   68 expression_sequence: expression_sequence . SEMICOLON expression

    SEMICOLON  schiebe und gehe zu Zustand 65 über
    RPAREN     schiebe und gehe zu Zustand 66 über


Zustand 30

   14 expression: MINUS expression .
   28 arithmetic_expression: expression . PLUS expression
   29                      | expression . MINUS expression
   30                      | expression . TIMES expression
   31                      | expression . DIVIDE expression
   32 comparison: expression . EQ expression
   33           | expression . NEQ expression
   34           | expression . GT expression
   35           | expression . LT expression
   36           | expression . GE expression
   37           | expression . LE expression
   38 boolean_expression: expression . AND expression
   39                   | expression . OR expression

    $default  reduziere mit Regel 14 (expression)


Zustand 31

   28 arithmetic_expression: expression . PLUS expression
   29                      | expression . MINUS expression
   30                      | expression . TIMES expression
   31                      | expression . DIVIDE expression
   32 comparison: expression . EQ expression
   33           | expression . NEQ expression
   34           | expression . GT expression
   35           | expression . LT expression
   36           | expression . GE expression
   37           | expression . LE expression
   38 boolean_expression: expression . AND expression
   39                   | expression . OR expression
   63 selection: IF expression . THEN expression ELSE expression
   64          | IF expression . THEN expression

    PLUS    schiebe und gehe zu Zustand 43 über
    MINUS   schiebe und gehe zu Zustand 44 über
    TIMES   schiebe und gehe zu Zustand 45 über
    DIVIDE  schiebe und gehe zu Zustand 46 über
    EQ      schiebe und gehe zu Zustand 47 über
    NEQ     schiebe und gehe zu Zustand 48 über
    LT      schiebe und gehe zu Zustand 49 über
    LE      schiebe und gehe zu Zustand 50 über
    GT      schiebe und gehe zu Zustand 51 über
    GE      schiebe und gehe zu Zustand 52 über
    AND     schiebe und gehe zu Zustand 53 über
    OR      schiebe und gehe zu Zustand 54 über
    THEN    schiebe und gehe zu Zustand 67 über


Zustand 32

   28 arithmetic_expression: expression . PLUS expression
   29                      | expression . MINUS expression
   30                      | expression . TIMES expression
   31                      | expression . DIVIDE expression
   32 comparison: expression . EQ expression
   33           | expression . NEQ expression
   34           | expression . GT expression
   35           | expression . LT expression
   36           | expression . GE expression
   37           | expression . LE expression
   38 boolean_expression: expression . AND expression
   39                   | expression . OR expression
   65 iteration: WHILE expression . DO expression

    PLUS    schiebe und gehe zu Zustand 43 über
    MINUS   schiebe und gehe zu Zustand 44 über
    TIMES   schiebe und gehe zu Zustand 45 über
    DIVIDE  schiebe und gehe zu Zustand 46 über
    EQ      schiebe und gehe zu Zustand 47 über
    NEQ     schiebe und gehe zu Zustand 48 über
    LT      schiebe und gehe zu Zustand 49 über
    LE      schiebe und gehe zu Zustand 50 über
    GT      schiebe und gehe zu Zustand 51 über
    GE      schiebe und gehe zu Zustand 52 über
    AND     schiebe und gehe zu Zustand 53 über
    OR      schiebe und gehe zu Zustand 54 über
    DO      schiebe und gehe zu Zustand 68 über


Zustand 33

   66 iteration: FOR ID . ASSIGN expression TO expression DO expression

    ASSIGN  schiebe und gehe zu Zustand 69 über


Zustand 34
